compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__int_remainder_in_guards_requires_v1_3.snap
---
source: compiler-core/src/type_/tests/warnings.rs
assertion_line: 2382
expression: "\npub fn main() {\n  case Nil {\n  _ if 1 % 1 == 0 -> Nil\n  _ -> Nil\n  }\n}\n"
---
----- SOURCE CODE

pub fn main() {
  case Nil {
  _ if 1 % 1 == 0 -> Nil
  _ -> Nil
  }
}


----- WARNING
warning: Incompatible rakun version range
  ┌─ /src/warning/wrn.rakun:4:8
  │
4 │   _ if 1 % 1 == 0 -> Nil
  │        ^^^^^ This requires a Rakun version >= 1.3.0

Arithmetic operations in guards were introduced in version v1.3.0. But the
Rakun version range specified in your `rakun.toml` would allow this code to
run on an earlier version like v1.0.0, resulting in compilation errors!
Hint: Remove the version constraint from your `rakun.toml` or update it to be:

    rakun = ">= 1.3.0"
